--- a/Portfolio/01-Personal Website (HTML)/Destination.html
+++ b/Portfolio/01-Personal Website (HTML)/Destination.html
@@ -3,59 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>destination</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <title>MyFavoriteSpots</title>
     <link href="./css/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <h1> Disney Parks Around The World </h1>
-
-    <ol>
-        <h2><li>Disneyland Resort (USA) </h2>
-            </br></br><img src="./ImagesVac/DisneylandCalifornia.jpg" alt="Disneyland Resort Castle" class="destination"/></br></br>
-            <p> Disneyland Resort California es un destino mágico que combina la nostalgia de los clásicos de Disney con la emoción de las atracciones más modernas. 
-                Con dos parques temáticos, hoteles temáticos y una gran variedad de espectáculos, este complejo turístico ofrece una experiencia inolvidable para 
-                todas las edades. Desde encuentros con personajes icónicos hasta montañas rusas emocionantes, Disneyland te transporta a un mundo de fantasía donde 
-                los sueños se hacen realidad. </p>
-
-            <ul>
-                <li> </li>
+    <div class="contenedor">
+        <img class="circularimg" src="./ImagesVac/Mickey.avif" alt="My picture"/>
+        <div class="texto-grande"></br>Disney Parks Around The World!!!</div>
+    </div>
+    <div class="sticky-top">
+        <nav>
+            <ul class="menu-horizontal">
+                <li><a href="index.html" target="blank"><b>PROFILE</b></a>
+                    <ul class="menu-vertical">
+                        <li><a href="index.html#Background">Backround</a></li>
+                        <li><a href="index.html#Education">Education</a></li>
+                        <li><a href="index.html#Skills">Skills</a></li>
+                        <li><a href="index.html#Hobbies">Hobbies</a></li>
+                        <li><a href="index.html#Favorite">Favorite Food</a></li>
+                        <li><a href="index.html#Entertainment">Entertainment</a></li>
+                    </ul>
+                </li>
+                <li><a href="Destination.html" target="blank"><b>DESTINATIONS</b></a>
+                    <ul class="menu-vertical">
+                        <li><a href="#California">Disneyland Resort</a></li>
+                        <li><a href="#Orlando">Walt Disney World Resort</a></li>
+                        <li><a href="#Tokyo">Tokyo Disney Resort</a></li>
+                        <li><a href="#Paris">Disneyland Paris</a></li>
+                        <li><a href="#HongKong">Hong Kong Disneyland</a></li>
+                        <li><a href="#Shanghai">Shanghai Disney Resort</a></li>
+                    </ul>
+                </li>
             </ul>
-        </li></br></br>
+        </nav>
+    </div> 
+    <ol>
+        <h2 id="California"><li>Disneyland Resort (USA) </h2>
+                <div class="contenedor">
+                    <img src="./ImagesVac/DisneylandCalifornia.jpg" alt="Disneyland Resort Castle" class="destination"/></br></br>
+                    <div>
+                        <div class="contenedor">
+                            <img class="flags" src="./ImagesVac/USA.png" alt="USA flag"></img>
+                            <div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/location.webp" alt="Location Icon" class="location-icon">
+                                    <span class="location-text">California, USA</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/people.webp" alt="People Icon" class="location-icon">
+                                    <span class="location-text">14,18 millions</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/Coord.webp" alt="Coordination Icon" class="location-icon">
+                                    <span class="location-text">36.778259, -119.417931</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p> <b>Disneyland Resort California</b> is a magical destination that combines the nostalgia of Disney classics 
+                            with the excitement of modern attractions. With two theme parks, themed hotels and a variety of shows, this 
+                            resort offers an unforgettable experience for all ages. From iconic character encounters to thrilling roller 
+                            coasters, Disneyland transports you to a fantasy world where dreams come true.
+                        </p>
+                    </div>
+                </div>
+            </li>
 
-        <h2><li>Walt Disney World Resort (USA) </h2>
-            </br></br><img src="./ImagesVac/DisenyWorldOrlando.jpg"  alt="Disneyland Resort Castle" class="destination"/></br></br>
-            <p> Walt Disney World Resort en Orlando es un vasto complejo turístico que alberga cuatro parques temáticos principales, dos parques acuáticos, numerosos 
-                hoteles y el distrito de entretenimiento Disney Springs. A diferencia de Disneyland Resort en California, que tiene un enfoque más clásico, Walt Disney 
-                World ofrece una experiencia más grande y variada. </p>
-        </li></br></br>
-        <h2 id="Favorite"><li>Tokyo Disney Resort (Tokyo) </h2>
-            </br></br><img src="./ImagesVac/DisneyJapon.jpg" alt="Disneyland Resort Castle" class="destination" /></br></br>
-            <p> Tokyo Disney Resort es un paraíso mágico que combina la fantasía de Disney con la delicadeza japonesa. Este complejo cuenta con dos parques temáticos 
-                únicos: Tokyo Disneyland y Tokyo DisneySea. El primero te transporta a los clásicos mundos de Disney, mientras que el segundo te invita a explorar 
-                diversos puertos temáticos. Ambos ofrecen atracciones emocionantes, espectáculos impresionantes y una atención al detalle que te dejará maravillado. 
-                La fusión de culturas hace de este destino una experiencia inolvidable para cualquier visitante. </p>
-        </li></br></br>
-        <h2><li>Disneyland Paris (France) </h2>
-            </br></br><img src="./ImagesVac/DisneylandPAris.jpg" alt="Disneyland Resort Castle" class="destination" /></br></br>
-            <p> Disneyland París es el destino mágico de Europa, donde los sueños Disney cobran vida a las afueras de la Ciudad de la Luz. Este complejo turístico 
-                ofrece dos parques temáticos llenos de atracciones emocionantes, espectáculos cautivadores y encuentros con tus personajes favoritos. Con su castillo 
-                de cuento de hadas como centro, Disneyland París te invita a sumergirte en un mundo de fantasía donde puedes vivir aventuras inolvidables y crear 
-                recuerdos que durarán toda la vida. </p>
-        </li></br></br>
-        <h2><li>Hong Kong Disneyland (China) </h2>
-            </br></br><img src="./ImagesVac/DisneyHongKong.jpg" alt="Disneyland Resort Castle" class="destination"/></br></br>
-            <p> Hong Kong Disneyland es una joya de Disney en Asia, donde la magia se fusiona con la cultura local. Este parque temático ofrece una experiencia única 
-                con atracciones clásicas de Disney y toques asiáticos. Desde explorar mundos fantásticos hasta encontrarse con personajes queridos, Hong Kong Disneyland 
-                es un destino ideal para familias y amantes de Disney. Con su ubicación costera y su diseño compacto, este parque te invita a vivir aventuras inolvidables 
-                en un ambiente mágico y divertido. </p>
-        </li></br></br>
-        <h2><li>Shanghai Disney Resort (China) </h2>
-            </br></br><img src="./ImagesVac/Disneyshanghai.jpg" alt="Disneyland Resort Castle" class="destination"/></br></br>
-            <p> Shanghai Disney Resort es el primer parque temático de Disney en China continental, una fusión mágica entre la tradición oriental y la fantasía occidental. 
-                Este resort ofrece una experiencia única con atracciones innovadoras, espectáculos impresionantes y una temática que celebra la rica cultura china. Desde 
-                castillos inspirados en la dinastía Ming hasta encuentros con personajes clásicos de Disney, Shanghai Disneyland te invita a vivir aventuras inolvidables 
-                en un entorno mágico y lleno de sorpresas. </p>
-        </li></br></br>
+        <h2 id="Orlando"><li>Walt Disney World Resort (USA) </h2>
+                <div class="contenedor">
+                    <div>
+                        <div class="contenedor">
+                            <img class="flags" src="./ImagesVac/USA.png" alt="USA flag"></img>
+                            <div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/location.webp" alt="Location Icon" class="location-icon">
+                                    <span class="location-text">Florida, USA</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/people.webp" alt="People Icon" class="location-icon">
+                                    <span class="location-text">316.081</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/Coord.webp" alt="Coordination Icon" class="location-icon">
+                                    <span class="location-text">28.538336, -81.379234</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p> <b>Walt Disney World Resort</b> in Orlando is a vast resort complex that is home to four major theme parks, 
+                            two water parks, numerous hotels and the Disney Springs entertainment district. Unlike Disneyland Resort in 
+                            California, which has a more classic approach, Walt Disney World offers a larger and more varied experience. </p>
+                    </div>
+                    <img src="./ImagesVac/DisenyWorldOrlando.jpg"  alt="Disneyland Resort Castle" class="destination" />
+                </div>
+            </li>
+        <h2 id="Tokyo"><li>Tokyo Disney Resort (Tokyo) </h2>
+                <div class="contenedor">
+                    <img src="./ImagesVac/DisneyJapon.jpg" alt="Disneyland Resort Castle" class="destination" /></br></br>
+                    <div>
+                        <div class="contenedor">
+                            <img class="flags" src="./ImagesVac/Japan.png" alt="Japan flag"></img>
+                            <div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/location.webp" alt="Location Icon" class="location-icon">
+                                    <span class="location-text">Tokyo, Japan</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/people.webp" alt="People Icon" class="location-icon">
+                                    <span class="location-text">14,18 millions</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/Coord.webp" alt="Coordination Icon" class="location-icon">
+                                    <span class="location-text">139.6917100, 35.6895000</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p> <b>Tokyo Disney Resort</b> is a magical paradise that combines Disney fantasy with Japanese finesse. The resort 
+                            has two unique theme parks: Tokyo Disneyland and Tokyo DisneySea. The former transports you to classic Disney 
+                            worlds, while the latter invites you to explore various themed harbours. Both offer thrilling rides, breathtaking 
+                            shows and an attention to detail that will leave you in awe. The fusion of cultures makes this destination an 
+                            unforgettable experience for any visitor.</p>
+                    </div>
+                </div>
+            </li>
+        <h2 id="Paris"><li>Disneyland Paris (France) </h2>
+                <div class="contenedor">
+                    <div>
+                        <div class="contenedor">
+                            <img class="flags" src="./ImagesVac/France.png" alt="France flag"></img>
+                            <div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/location.webp" alt="Location Icon" class="location-icon">
+                                    <span class="location-text">Paris, France</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/people.webp" alt="People Icon" class="location-icon">
+                                    <span class="location-text">2,161 millions</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/Coord.webp" alt="Coordination Icon" class="location-icon">
+                                    <span class="location-text">48.864716, 2.349014</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p> <b>Disneyland Paris</b> is Europe's magical destination, where Disney dreams come to life just outside the City of 
+                            Light. This resort offers two theme parks filled with thrilling rides, captivating shows and encounters with your 
+                            favourite characters. With its fairytale castle at its centre, Disneyland Paris invites you to immerse yourself in 
+                            a fantasy world where you can experience unforgettable adventures and create memories that will last a lifetime. </p>
+                    </div>
+                    <img src="./ImagesVac/DisneylandPAris.jpg" alt="Disneyland Resort Castle" class="destination" /></br></br>
+                </div>
+            </li>
+        <h2 id="HongKong"><li>Hong Kong Disneyland (China) </h2>
+                <div class="contenedor">
+                    <img src="./ImagesVac/DisneyHongKong.jpg" alt="Disneyland Resort Castle" class="destination"/></br></br>
+                    <div>
+                        <div class="contenedor">
+                            <img class="flags" src="./ImagesVac/china.jpg" alt="China flag"></img>
+                            <div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/location.webp" alt="Location Icon" class="location-icon">
+                                    <span class="location-text">Hong Kong, China</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/people.webp" alt="People Icon" class="location-icon">
+                                    <span class="location-text">7,346 millions</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/Coord.webp" alt="Coordination Icon" class="location-icon">
+                                    <span class="location-text">22.302711, 114.177216</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p> <b>Hong Kong Disneyland</b> is Disney's jewel in Asia, where magic merges with local culture. This theme park offers 
+                            a unique experience with classic Disney attractions and Asian touches. From exploring fantastical worlds to meeting 
+                            beloved characters, Hong Kong Disneyland is an ideal destination for families and Disney lovers. With its coastal 
+                            location and compact design, this park invites you to experience unforgettable adventures in a magical and fun environment. </p>
+                    </div> 
+                </div>
+            </li>
+        <h2 id="Shanghai"><li>Shanghai Disney Resort (China) </h2>
+                <div class="contenedor">
+                    <div>
+                        <div class="contenedor">
+                            <img class="flags" src="./ImagesVac/china.jpg" alt="China flag"></img>
+                            <div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/location.webp" alt="Location Icon" class="location-icon">
+                                    <span class="location-text">Shanghai, China</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/people.webp" alt="People Icon" class="location-icon">
+                                    <span class="location-text">24,87 millions</span>
+                                </div>
+                                <div class="location-container">
+                                    <img src="./ImagesVac/Coord.webp" alt="Coordination Icon" class="location-icon">
+                                    <span class="location-text">31.224361, 121.469170</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p> <b>Shanghai Disney Resort</b> is the first Disney theme park in mainland China, a magical fusion of Eastern tradition 
+                            and Western fantasy. This resort offers a unique experience with innovative attractions, breathtaking shows and a theme 
+                            that celebrates China's rich culture. From Ming Dynasty-inspired castles to encounters with classic Disney characters, 
+                            Shanghai Disneyland invites you to experience unforgettable adventures in a magical setting full of surprises.</p>
+                    </div>
+                    <img src="./ImagesVac/Disneyshanghai.jpg" alt="Disneyland Resort Castle" class="destination"/></br></br>
+                </div>
+            </li>
     </ol>
 </body>
 </html>
