--- a/Portfolio/02-CSS/diagonal.html
+++ b/Portfolio/02-CSS/diagonal.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>CSS testing - Diagonal</title>
-    <link rel="stylesheet" href="css/diagonal.css">
+    <link href="./css/diagonal.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Diagonal</h1>
-    <div>
-        <p>Top</p>
+    <div class="Ejercicio">
+        <h1>CSS Box model (1 pt)</h1>
     </div>
-    <div>
-        <p>Mid</p>
+    <div class="BoxExe1">
+        <div class="Exe1">
+            <div class="top-container"></div>
+            <div class="middle-container"></div>
+            <div class="bottom-container"></div>
+        </div>
     </div>
-    <div>
-        <p>Bot</p>
+    <div class="regresar">
+        <h1><a href="index.html">Volver</a></h1>
     </div>
 </body>
 </html>
