--- a/Portfolio/02-CSS/mondrian.html
+++ b/Portfolio/02-CSS/mondrian.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mondrian</title>
+    <link href="./css/mondrian.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Mondrian</h1>
+    <div class="Ejercicio">
+        <h1>CSS display and layout (3pts)</h1>
+    </div>
+    <div class="PaintingBox">
+        <div class="Piet">
+            <div class="BlueBox"></div>
+            <div class="YellowBox"></div>
+            <div class="RedBox"></div>
+            <div class="LineaVertical1Left"></div>
+            <div class="LineaVertical2Left"></div>
+            <div class="LineaVertical3Left"></div>
+            <div class="LineaVertical4Left"></div>
+            <div class="LineaHorizontal1Arriba"></div>
+            <div class="LineaHorizontal2Arriba"></div>
+            <div class="LineaHorizontal3Arriba"></div>
+        </div>
+    </div>
+    <div class="regresar">
+        <h1><a href="index.html">Volver</a></h1>
+    </div>
 </body>
 </html>
