--- a/Portfolio/02-CSS/position.html
+++ b/Portfolio/02-CSS/position.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="css/position.css">
 </head>
 <body>
-    <h1>Position</h1>
-    <div>
-        <p>Top</p>
+    <div class="Ejercicio">
+        <h1>CSS position:absolute (1 pt)</h1>
     </div>
-    <div>
-        <p>Mid</p>
+    <div class="BoxExe1">
+        <div class="ExeHorizontal">
+            <div class="RedBoxOrg3"></div>
+            <div class="BlueBoxOrg3"></div>
+            <div class="YellowBoxOrg3"></div>
+        </div>
+        <div class="Exe1">
+            <div class="RedBoxCuad3"></div>
+            <div class="BlueBoxCuad3"></div>
+            <div class="YellowBoxCuad3"></div>
+        </div>
     </div>
-    <div>
-        <p>Bot</p>
+    <div class="regresar">
+        <h1><a href="index.html">Volver</a></h1>
     </div>
 </body>
 </html>
