--- a/Portfolio/02-CSS/romania.html
+++ b/Portfolio/02-CSS/romania.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="css/romania.css">
 </head>
 <body>
-    <h1>Romanian flag</h1>
-    <div>
-        <p>Top</p>
+    <div class="Ejercicio">
+        <h1>CSS position:relative (1 pt)</h1>
     </div>
-    <div>
-        <p>Mid</p>
+    <div class="BoxExe1">
+        <div class="ExeHorizontal">
+            <div class="RedBoxOrg3"></div>
+            <div class="BlueBoxOrg3"></div>
+            <div class="YellowBoxOrg3"></div>
+        </div>
+        <div class="Exe2">
+            <div class="RedBox3"></div>
+            <div class="BlueBox3"></div>
+            <div class="YellowBox3"></div>
+        </div>
     </div>
-    <div>
-        <p>Bot</p>
+    <div class="regresar">
+        <h1><a href="index.html">Volver</a></h1>
     </div>
 </body>
 </html>
