--- a/Portfolio/02-CSS/index.html
+++ b/Portfolio/02-CSS/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS testing</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <h1 class="texto-grande"> Cascade Styling Sheets </h1>
     <ul>
-        <li><a href="diagonal.html">Diagonal</a></li>
-        <li><a href="mondrian.html">Mondrian</a></li>
-        <li><a href="romania.html">Romania</a></li>
-        <li><a href="position.html">Position</a></li>
+        <li><div class="Cuadrado1"><a href="diagonal.html"><h1>Diagonal</h1></a></div></li>
+        <li><div class="Cuadrado2"><a href="mondrian.html"><h1>Mondrian</h1></a></div></li>
+        <li><div class="Cuadrado3"><a href="romania.html"><h1>Romania</h1></a></div></li>
+        <li><div class="Cuadrado4"><a href="position.html"><h1>Position</h1></a></div></li>
     </ul>
 </body>
 </html>
