--- a/Tutorials/04_Simon/index.html
+++ b/Tutorials/04_Simon/index.html
@@ -6,6 +6,8 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="simon.js" type="text/javascript" defer></script>
 </head>
 
 <body>
@@ -35,7 +37,8 @@
 
   </div>
 
-
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="simon.js"></script>
 </body>
 
 </html>
