--- a/Portfolio/04-BootstrapShowcase/index.html
+++ b/Portfolio/04-BootstrapShowcase/index.html
@@ -10,7 +10,6 @@
     <link href="./css/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-
     <!-- Nav Bar -->
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
@@ -20,7 +19,16 @@
             </a>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <!-- Pop Over -->
+            <script>
+                document.addEventListener('DOMContentLoaded', function () {
+                    const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+                    const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+                });
+            </script>
+            <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Not Working">
+                Search
+            </button>
           </form>
         </div>
     </nav>
@@ -28,22 +36,20 @@
     <!-- Card -->
     <div class="row justify-content-center">
         <div class="col-md-4 mt-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-4 mt-4" style="width: 18rem;">
                 <img src="./images/bebidas.jpeg" class="imgrecetas" alt="Bebida">
                 <div class="card-body text-center">
-                  <h5 class="card-title">Bebidas</h5>
-                  <!-- Tooltip -->
-                  <script>
+                    <h5 class="card-title">Bebidas</h5>
+                    <!-- Tooltip -->
+                    <script>
                     document.addEventListener('DOMContentLoaded', function () {
-                        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-                        tooltipTriggerList.forEach(function (tooltipTriggerEl) {
-                            new bootstrap.Tooltip(tooltipTriggerEl);
-                        });
+                        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+                        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
                     });
                     </script>
-                  <a type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Working on it">
-                    Visit Page
-                  </a>
+                    <a type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Working on it">
+                        Visit Page
+                    </a>
                 </div>
               </div>
         </div>
@@ -59,9 +65,17 @@
         </div>
     </div>
 
+    <!-- Progress Bar -->
+    <div class="border">
+        <h2>Total de progreso de las recetas</h2>
+        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar w-75"></div>
+        </div>
+    </div>
+
     <!-- Accordion -->
-    <h2>Preguntas frecuentes</h2>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <h2 class="border">Preguntas frecuentes</h2>
+    <div class="accordion accordion-flush border" id="accordionFlushExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -92,15 +106,25 @@
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body"> ¡Nos encantaría conocer tus recetas! Si deseas compartir tus creaciones culinarias con nuestra comunidad, puedes ponerte en contacto con nosotros a través 
-                del formulario de contacto o enviarnos un correo electrónico </div>
+                del formulario de contacto o enviarnos un correo electrónico 
+                <!-- Iconic Link -->
+                <a class="icon-link" href="mailto:tuemail@gmail.com">
+                    correo electrónico
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-paper-heart" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v1.133l.941.502A2 2 0 0 1 16 5.4V14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5.4a2 2 0 0 1 1.059-1.765L2 3.133zm0 2.267-.47.25A1 1 0 0 0 1 5.4v.817l1 .6zm1 3.15 3.75 2.25L8 8.917l1.25.75L13 7.417V2a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1zm11-.6 1-.6V5.4a1 1 0 0 0-.53-.882L14 4.267zM8 2.982C9.664 1.309 13.825 4.236 8 8 2.175 4.236 6.336 1.31 8 2.982m7 4.401-4.778 2.867L15 13.117zm-.035 6.88L8 10.082l-6.965 4.18A1 1 0 0 0 2 15h12a1 1 0 0 0 .965-.738ZM1 13.116l4.778-2.867L1 7.383v5.734Z"/>
+                    </svg>
+                </a>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Spinner -->
-      <div class="d-flex align-items-center">
-        <strong role="status">Loading...</strong>
-        <div class="spinner-border ms-auto" aria-hidden="true"></div>
-      </div>
+    <!-- Spinner -->
+    <div class="d-flex align-items-center border top">
+        <strong>Cargando...</strong>
+        <div class="spinner-border text-primary ms-auto"></div>
+    </div>
+    
+
 </body>
 </html>
