--- a/Portfolio/04-BootstrapShowcase/index.html
+++ b/Portfolio/04-BootstrapShowcase/index.html
@@ -35,7 +35,7 @@
 
     <!-- Card -->
     <div class="row justify-content-center">
-        <div class="col-md-4 mt-4">
+        <div class="col-md-4">
             <div class="card mb-4 mt-4" style="width: 18rem;">
                 <img src="./images/bebidas.jpeg" class="imgrecetas" alt="Bebida">
                 <div class="card-body text-center">
@@ -53,8 +53,8 @@
                 </div>
               </div>
         </div>
-        <div class="col-md-4 mt-4">
-            <div class="card" style="width: 18rem;">
+        <div class="col-md-4">
+            <div class="card mb-4 mt-4" style="width: 18rem;">
                 <img src="./images/Postre.jpeg" class="imgrecetas" alt="Postre">
                 <div class="card-body text-center">
                   <h5 class="card-title">Postre</h5>
@@ -124,7 +124,9 @@
         <strong>Cargando...</strong>
         <div class="spinner-border text-primary ms-auto"></div>
     </div>
-    
 
+    <div class="sticky-sm-bottom green-square">
+        <footer>Watcha Hungry 4?</footer>
+    </div>
 </body>
 </html>
