--- a/Portfolio/05-JS/prime.html
+++ b/Portfolio/05-JS/prime.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>Prime Factors</h1>
     <div>
         <label for="num">Write a number</label>
         <input type="text" id="num" />
