--- a/Tutorials/01_Tinpire/index.html
+++ b/Tutorials/01_Tinpire/index.html
@@ -1,34 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tinpire - Finding love in every corner of the empire</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="./css/style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- Title Section -->
+    <section id="title" class="gradient-background pt-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 mb-5 mb-lg-0">
+            <h1 class="display-4 fw-bold mb-4">
+              Meet new and interesting troopers nearby.
+            </h1>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button class="btn btn-light btn-lg px-4 me-md-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-apple mb-1"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11.182.008C11.148-.03 9.923.023 8.857 1.18c-1.066 1.156-.902 2.482-.878 2.516.024.034 1.52.087 2.475-1.258.955-1.345.762-2.391.728-2.43zm3.314 11.733c-.048-.096-2.325-1.234-2.113-3.422.212-2.189 1.675-2.789 1.698-2.854.023-.065-.597-.79-1.254-1.157a3.692 3.692 0 0 0-1.563-.434c-.108-.003-.483-.095-1.254.116-.508.139-1.653.589-1.968.607-.316.018-1.256-.522-2.267-.665-.647-.125-1.333.131-1.824.328-.49.196-1.422.754-2.074 2.237-.652 1.482-.311 3.83-.067 4.56.244.729.625 1.924 1.273 2.796.576.984 1.34 1.667 1.659 1.899.319.232 1.219.386 1.843.067.502-.308 1.408-.485 1.766-.472.357.013 1.061.154 1.782.539.571.197 1.111.115 1.652-.105.541-.221 1.324-1.059 2.238-2.758.347-.79.505-1.217.473-1.282z"
+                  />
+                </svg>
+                Download
+              </button>
+              <button class="btn btn-outline-light btn-lg px-4">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-google-play mb-1"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M14.222 9.374c1.037-.61 1.037-2.137 0-2.748L11.528 5.04 8.32 8l3.207 2.96 2.694-1.586Zm-3.595 2.116L7.583 8.68 1.03 14.73c.201 1.029 1.36 1.61 2.303 1.055l7.294-4.295ZM1 13.396V2.603L6.846 8 1 13.396ZM1.03 1.27l6.553 6.05 3.044-2.81L3.333.215C2.39-.341 1.231.24 1.03 1.27Z"
+                  />
+                </svg>
+                Download
+              </button>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="./images/iphone.png"
+              alt="iPhone mockup"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tinpire - Finding love on evey corner of the empire</title>
-</head>
+    <!-- Features Section -->
+    <section id="features" class="py-5">
+      <div class="container">
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col text-center">
+            <div class="feature-icon mx-auto">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="30"
+                fill="currentColor"
+                class="bi bi-check2-circle"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"
+                />
+                <path
+                  d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"
+                />
+              </svg>
+            </div>
+            <h3 class="fs-2 mb-3">Easy to use.</h3>
+            <p class="mb-0">Even YOU wouldn't miss that shot.</p>
+          </div>
+          <div class="col text-center">
+            <div class="feature-icon mx-auto">
+              <img src="./images/empire.png" alt="Empire" class="feature-img" />
+            </div>
+            <h3 class="fs-2 mb-3">Elite Clientele.</h3>
+            <p class="mb-0">We have all the units, even the secret ones.</p>
+          </div>
+          <div class="col text-center">
+            <div class="feature-icon mx-auto">
+              <img
+                src="./images/inquisitors.png"
+                alt="Inquisitors"
+                class="feature-img"
+              />
+            </div>
+            <h3 class="fs-2 mb-3">Guaranteed to work.</h3>
+            <p class="mb-0">Find the love of your life or your credits back.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-<body>
+    <!-- Testimonial Section -->
+    <section id="testimonial" class="py-5">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-8 mx-auto">
+            <h2 class="display-6">
+              "I no longer have to break regulation by removing my helmet for
+              love. I've found the cutest buckethead in the empire"
+            </h2>
+            <img
+              src="./images/pilot.jpg"
+              class="testimonial-img"
+              alt="Profile"
+            />
+            <p class="mt-2 testimonial-text">
+              Kasan Moor, 128th TIE Interceptor Squad
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="logo-container">
+              <img
+                src="./images/death_star.jpeg"
+                class="client-logo"
+                alt="Death Star"
+              />
+              <img src="./images/empire.png" class="client-logo" alt="Empire" />
+              <img
+                src="./images/Imperial_Department_of_Military_Research.png"
+                class="client-logo"
+                alt="Imperial Research"
+              />
+              <img
+                src="./images/ImplGuardBanner.png"
+                class="client-logo"
+                alt="Imperial Guard"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- Title -->
-  <section id="title">
+    <!-- Pricing Section -->
+    <section id="pricing" class="py-5">
+      <div class="container">
+        <h2 class="text-center display-5">A Plan for Every Trooper's Needs</h2>
+        <p class="text-center text-muted">
+          Simple and affordable price plans for you.
+        </p>
 
-  </section>
-  <!-- Features -->
-  <section id="features">
+        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Trooper</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title">
+                  $0<small class="text-muted fw-light">/mo</small>
+                </h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>5 Matches Per Day</li>
+                  <li>10 Messages Per Day</li>
+                  <li>Unlimited App Usage</li>
+                </ul>
+                <button type="button" class="w-100 btn btn-lg btn-outline-dark">
+                  Sign up for free
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Commander</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title">
+                  $15<small class="text-muted fw-light">/mo</small>
+                </h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Unlimited Matches</li>
+                  <li>Unlimited Messages</li>
+                  <li>Unlimited App Usage</li>
+                </ul>
+                <button type="button" class="w-100 btn btn-lg btn-dark">
+                  Get started
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3 bg-dark text-white">
+                <h4 class="my-0 fw-normal">Grand Moff</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title">
+                  $29<small class="text-muted fw-light">/mo</small>
+                </h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>Priority Listing</li>
+                  <li>Unlimited Matches & Messages</li>
+                  <li>Unlimited App Usage</li>
+                </ul>
+                <button type="button" class="w-100 btn btn-lg btn-dark">
+                  Contact us
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  </section>
-  <!-- Testimonial -->
-  <section id="testimonial">
+    <!-- Footer -->
+    <footer class="gradient-background">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md">
+            <small class="d-block">© TrooperDate</small>
+          </div>
+          <div class="col-md">
+            <h5>Section</h5>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <h5>Section</h5>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <h5>Section</h5>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-  </section>
-  <!-- Pricing -->
-  <section id="pricing">
-
-  </section>
-  <!-- Footer -->
-  <section id="footer">
-
-  </section>
-</body>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
